--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -613,12 +613,17 @@ spec:
                         description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                         type: string
                     type: object
+                  mode:
+                    description: WorkflowMode describes the mode of workflow
+                    type: string
                   stepIndex:
                     type: integer
                   steps:
                     items:
                       description: WorkflowStepStatus record the status of a workflow step
                       properties:
+                        id:
+                          type: string
                         message:
                           description: A human readable message indicating details about why the workflowStep is in this state.
                           type: string
@@ -633,14 +638,39 @@ spec:
                         subSteps:
                           description: SubStepsStatus record the status of workflow steps.
                           properties:
+                            mode:
+                              description: WorkflowMode describes the mode of workflow
+                              type: string
                             stepIndex:
                               type: integer
                             steps:
-                              items: {}
+                              items:
+                                description: WorkflowSubStepStatus record the status of a workflow step
+                                properties:
+                                  id:
+                                    type: string
+                                  message:
+                                    description: A human readable message indicating details about why the workflowStep is in this state.
+                                    type: string
+                                  name:
+                                    type: string
+                                  phase:
+                                    description: WorkflowStepPhase describes the phase of a workflow step.
+                                    type: string
+                                  reason:
+                                    description: A brief CamelCase message indicating details about why the workflowStep is in this state.
+                                    type: string
+                                  type:
+                                    type: string
+                                required:
+                                - id
+                                type: object
                               type: array
                           type: object
                         type:
                           type: string
+                      required:
+                      - id
                       type: object
                     type: array
                   suspend:
@@ -649,6 +679,7 @@ spec:
                     type: boolean
                 required:
                 - contextBackend
+                - mode
                 - suspend
                 - terminated
                 type: object
@@ -1335,12 +1366,17 @@ spec:
                         description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                         type: string
                     type: object
+                  mode:
+                    description: WorkflowMode describes the mode of workflow
+                    type: string
                   stepIndex:
                     type: integer
                   steps:
                     items:
                       description: WorkflowStepStatus record the status of a workflow step
                       properties:
+                        id:
+                          type: string
                         message:
                           description: A human readable message indicating details about why the workflowStep is in this state.
                           type: string
@@ -1355,14 +1391,39 @@ spec:
                         subSteps:
                           description: SubStepsStatus record the status of workflow steps.
                           properties:
+                            mode:
+                              description: WorkflowMode describes the mode of workflow
+                              type: string
                             stepIndex:
                               type: integer
                             steps:
-                              items: {}
+                              items:
+                                description: WorkflowSubStepStatus record the status of a workflow step
+                                properties:
+                                  id:
+                                    type: string
+                                  message:
+                                    description: A human readable message indicating details about why the workflowStep is in this state.
+                                    type: string
+                                  name:
+                                    type: string
+                                  phase:
+                                    description: WorkflowStepPhase describes the phase of a workflow step.
+                                    type: string
+                                  reason:
+                                    description: A brief CamelCase message indicating details about why the workflowStep is in this state.
+                                    type: string
+                                  type:
+                                    type: string
+                                required:
+                                - id
+                                type: object
                               type: array
                           type: object
                         type:
                           type: string
+                      required:
+                      - id
                       type: object
                     type: array
                   suspend:
@@ -1371,6 +1432,7 @@ spec:
                     type: boolean
                 required:
                 - contextBackend
+                - mode
                 - suspend
                 - terminated
                 type: object
