--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_initializers.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_initializers.yaml
@@ -1026,6 +1026,9 @@ spec:
                                 description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                                 type: string
                             type: object
+                          mode:
+                            description: WorkflowMode describes the mode of workflow
+                            type: string
                           stepIndex:
                             type: integer
                           steps:
@@ -1033,6 +1036,8 @@ spec:
                               description: WorkflowStepStatus record the status of
                                 a workflow step
                               properties:
+                                id:
+                                  type: string
                                 message:
                                   description: A human readable message indicating
                                     details about why the workflowStep is in this
@@ -1053,14 +1058,46 @@ spec:
                                   description: SubStepsStatus record the status of
                                     workflow steps.
                                   properties:
+                                    mode:
+                                      description: WorkflowMode describes the mode
+                                        of workflow
+                                      type: string
                                     stepIndex:
                                       type: integer
                                     steps:
-                                      items: {}
+                                      items:
+                                        description: WorkflowSubStepStatus record
+                                          the status of a workflow step
+                                        properties:
+                                          id:
+                                            type: string
+                                          message:
+                                            description: A human readable message
+                                              indicating details about why the workflowStep
+                                              is in this state.
+                                            type: string
+                                          name:
+                                            type: string
+                                          phase:
+                                            description: WorkflowStepPhase describes
+                                              the phase of a workflow step.
+                                            type: string
+                                          reason:
+                                            description: A brief CamelCase message
+                                              indicating details about why the workflowStep
+                                              is in this state.
+                                            type: string
+                                          type:
+                                            type: string
+                                        required:
+                                        - id
+                                        type: object
                                       type: array
                                   type: object
                                 type:
                                   type: string
+                              required:
+                              - id
                               type: object
                             type: array
                           suspend:
@@ -1069,6 +1106,7 @@ spec:
                             type: boolean
                         required:
                         - contextBackend
+                        - mode
                         - suspend
                         - terminated
                         type: object
