--- a/charts/vela-core/templates/defwithtemplate/labels.yaml
+++ b/charts/vela-core/templates/defwithtemplate/labels.yaml
@@ -14,9 +14,16 @@ spec:
   schematic:
     cue:
       template: |
-        patch: spec: template: metadata: labels: {
-        	for k, v in parameter {
-        		"\(k)": v
+        patch: {
+        	metadata: labels: {
+        		for k, v in parameter {
+        			"\(k)": v
+        		}
+        	}
+        	spec: template: metadata: labels: {
+        		for k, v in parameter {
+        			"\(k)": v
+        		}
         	}
         }
         parameter: [string]: string
