--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
@@ -3390,6 +3390,11 @@ spec:
                           required:
                           - name
                           type: object
+                        manageHealthCheck:
+                          description: ManageHealthCheck means the policy will handle
+                            health checking and skip application controller built-in
+                            health checking.
+                          type: boolean
                         schematic:
                           description: Schematic defines the data format and template
                             of the encapsulation of the policy definition
