--- a/charts/vela-core/templates/addons/ocm-cluster-manager.yaml
+++ b/charts/vela-core/templates/addons/ocm-cluster-manager.yaml
@@ -517,6 +517,7 @@ metadata:
   annotations:
     addons.oam.dev/description: ocm-cluster-manager can deploy an OCM hub cluster
       environment.
+    addons.oam.dev/name: ocm-cluster-manager
   labels:
     addons.oam.dev/type: ocm-cluster-manager
   name: ocm-cluster-manager
