--- a/charts/vela-core/templates/addons/terraform.yaml
+++ b/charts/vela-core/templates/addons/terraform.yaml
@@ -18,7 +18,7 @@ data:
               chart: terraform-controller
               repoType: helm
               url: https://charts.kubevela.net/addons
-              version: 0.1.17
+              version: 0.1.19
             type: helm
           - name: terraform-system
             properties:
@@ -48,6 +48,7 @@ metadata:
   annotations:
     addons.oam.dev/description: Terraform Controller is a Kubernetes Controller for
       Terraform.
+    addons.oam.dev/name: terraform
   labels:
     addons.oam.dev/type: terraform
   name: terraform
