--- a/charts/vela-core/templates/addons/kruise.yaml
+++ b/charts/vela-core/templates/addons/kruise.yaml
@@ -191,6 +191,7 @@ metadata:
   annotations:
     addons.oam.dev/description: Kruise is a Kubernetes extended suite for application
       automations
+    addons.oam.dev/name: kruise
   labels:
     addons.oam.dev/type: kruise
   name: kruise
