--- a/charts/vela-core/templates/addons/observability-asset.yaml
+++ b/charts/vela-core/templates/addons/observability-asset.yaml
@@ -121,6 +121,7 @@ kind: ConfigMap
 metadata:
   annotations:
     addons.oam.dev/description: Preparations that observability need
+    addons.oam.dev/name: observability-asset
   labels:
     addons.oam.dev/type: observability-asset
   name: observability-asset
