Feat(health-scope): support multi-cluster's healthcheck

--- a/charts/oam-runtime/crds/core.oam.dev_healthscopes.yaml
+++ b/charts/oam-runtime/crds/core.oam.dev_healthscopes.yaml
@@ -402,6 +402,8 @@ spec:
                         - healthStatus
                         type: object
                       type: array
+                    envName:
+                      type: string
                   required:
                   - appName
                   type: object
