--- a/charts/vela-core/crds/core.oam.dev_applicationrevisions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applicationrevisions.yaml
@@ -773,6 +773,8 @@ spec:
                           description: ApplicationComponentStatus record the health
                             status of App component
                           properties:
+                            env:
+                              type: string
                             healthy:
                               type: boolean
                             message:
@@ -2851,6 +2853,8 @@ spec:
                           description: ApplicationComponentStatus record the health
                             status of App component
                           properties:
+                            env:
+                              type: string
                             healthy:
                               type: boolean
                             message:
