--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -549,6 +549,8 @@ spec:
                 items:
                   description: ApplicationComponentStatus record the health status of App component
                   properties:
+                    env:
+                      type: string
                     healthy:
                       type: boolean
                     message:
@@ -1336,6 +1338,8 @@ spec:
                 items:
                   description: ApplicationComponentStatus record the health status of App component
                   properties:
+                    env:
+                      type: string
                     healthy:
                       type: boolean
                     message:
