--- a/charts/vela-core/crds/core.oam.dev_initializers.yaml
+++ b/charts/vela-core/crds/core.oam.dev_initializers.yaml
@@ -884,6 +884,8 @@ spec:
                           description: ApplicationComponentStatus record the health
                             status of App component
                           properties:
+                            env:
+                              type: string
                             healthy:
                               type: boolean
                             message:
