--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_healthscopes.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_healthscopes.yaml
@@ -402,6 +402,8 @@ spec:
                         - healthStatus
                         type: object
                       type: array
+                    envName:
+                      type: string
                   required:
                   - appName
                   type: object
