--- a/charts/vela-core/templates/defwithtemplate/env-binding.yaml
+++ b/charts/vela-core/templates/defwithtemplate/env-binding.yaml
@@ -55,7 +55,7 @@ spec:
         	}
         }
         parameter: {
-        	clusterManagementEngine: *"ocm" | string
+        	clusterManagementEngine: *"cluster-gateway" | string
         	envs: [...#Env]
         }
 
