Fix: fix the output `DB_PASSWORD` for rds definition
Fixed the output `DB_PASSWORD` for ComponentDefinition alibaba-rds

--- a/charts/vela-core/templates/definitions/terraform-alibaba-rds.yaml
+++ b/charts/vela-core/templates/definitions/terraform-alibaba-rds.yaml
@@ -39,7 +39,7 @@ spec:
           value = module.rds.this_db_instance_connection_string
         }
         output "DB_PASSWORD" {
-          value = module.rds.this_db_instance_port
+          value = var.password
         }
 
         variable "instance_name" {
