--- a/charts/vela-core/templates/defwithtemplate/env-binding.yaml
+++ b/charts/vela-core/templates/defwithtemplate/env-binding.yaml
@@ -53,6 +53,7 @@ spec:
         			name?: string
         		}
         	}
+        	selector?: components: [...string]
         }
         parameter: {
         	clusterManagementEngine: *"cluster-gateway" | string
