--- a/charts/vela-core/crds/core.oam.dev_envbindings.yaml
+++ b/charts/vela-core/crds/core.oam.dev_envbindings.yaml
@@ -98,13 +98,13 @@ spec:
                                   WorkflowStep
                                 items:
                                   properties:
-                                    exportKey:
-                                      type: string
                                     name:
                                       type: string
+                                    valueFrom:
+                                      type: string
                                   required:
-                                  - exportKey
                                   - name
+                                  - valueFrom
                                   type: object
                                 type: array
                               properties:
