--- a/docs/examples/workflow/basic-app.yaml
+++ b/docs/examples/workflow/basic-app.yaml
@@ -21,7 +21,7 @@ spec:
           component: "server1"
         outputs:
           - name: server1IP
-            exportKey: "myIP"
+            valueFrom: "myIP"
       - name: deploy-server2
         type: apply-with-ip
         inputs:
