--- a/docs/examples/workflow-with-ocm/initializers/init-managed-cluster.yaml
+++ b/docs/examples/workflow-with-ocm/initializers/init-managed-cluster.yaml
@@ -21,7 +21,7 @@ spec:
               component: ack-worker
             outputs:
               - name: connInfo
-                exportKey: connInfo
+                valueFrom: connInfo
 
           - name: register-ack
             type: register-cluster
