--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
@@ -2075,13 +2075,13 @@ spec:
                                 WorkflowStep
                               items:
                                 properties:
-                                  exportKey:
-                                    type: string
                                   name:
                                     type: string
+                                  valueFrom:
+                                    type: string
                                 required:
-                                - exportKey
                                 - name
+                                - valueFrom
                                 type: object
                               type: array
                             properties:
@@ -2495,13 +2495,13 @@ spec:
                                     of WorkflowStep
                                   items:
                                     properties:
-                                      exportKey:
-                                        type: string
                                       name:
                                         type: string
+                                      valueFrom:
+                                        type: string
                                     required:
-                                    - exportKey
                                     - name
+                                    - valueFrom
                                     type: object
                                   type: array
                                 properties:
