--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -784,13 +784,13 @@ spec:
                       description: StepOutputs defines output variable of WorkflowStep
                       items:
                         properties:
-                          exportKey:
-                            type: string
                           name:
                             type: string
+                          valueFrom:
+                            type: string
                         required:
-                        - exportKey
                         - name
+                        - valueFrom
                         type: object
                       type: array
                     properties:
@@ -1096,13 +1096,13 @@ spec:
                           description: StepOutputs defines output variable of WorkflowStep
                           items:
                             properties:
-                              exportKey:
-                                type: string
                               name:
                                 type: string
+                              valueFrom:
+                                type: string
                             required:
-                            - exportKey
                             - name
+                            - valueFrom
                             type: object
                           type: array
                         properties:
