Support MultiCluster EnvBinding with cluster-gateway (#2247)
* Feat: init multicluster

* Feat: add secret namespace auto-detect

* Style: format

* Style: split gc codes

* Feat: add cluster cli

* Fix: rebase workflow on master

* Feat: add component selector for env binding

* Fix: selector & patch conflict

* Feat: add local cluster support & fix unit test

* Fix: fix omitempty bug

* Feat(health-scope): support multi-cluster's healthcheck

* Fix: resourcetracker gc bug & rename

* Feat: add multicluster to op.Read

Co-authored-by: yangsoon <songyang.song@alibaba-inc.com>

--- a/charts/vela-core/templates/defwithtemplate/env-binding.yaml
+++ b/charts/vela-core/templates/defwithtemplate/env-binding.yaml
@@ -53,9 +53,10 @@ spec:
         			name?: string
         		}
         	}
+        	selector?: components: [...string]
         }
         parameter: {
-        	clusterManagementEngine: *"ocm" | string
+        	clusterManagementEngine: *"cluster-gateway" | string
         	envs: [...#Env]
         }
 
