--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_envbindings.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_envbindings.yaml
@@ -178,6 +178,15 @@ spec:
                               type: string
                           type: object
                       type: object
+                    selector:
+                      description: EnvSelector defines which components should this
+                        env contains
+                      properties:
+                        components:
+                          items:
+                            type: string
+                          type: array
+                      type: object
                   required:
                   - name
                   - patch
